docroot/sites/all/themes/custom/virginsport/src/scss/style/components/_vs-festival-results-card.scss
// Blocks
// ----------------------------------------------------------------------------

.page-wrapper {
  background-color: #F0F0F0;
}

.vs-festival-results-card {
  @include clearfix();
  display: block;
  padding: 2.5rem 0;
}


// Elements
// ----------------------------------------------------------------------------

.vs-festival-results-card__image-wrapper {
  @include box-shadow(0 8px 17px 0 rgba($c-black, .2));
  border-radius: .625rem;
  position: relative;
  z-index: 1;

  @include media-breakpoint-up(md) {
    margin-left: -.9375rem;
    margin-right: -.9375rem;
  }
}

.vs-festival-results-card__image {
  background-position: center center;
  background-size: cover;
  border-radius: .625rem .625rem 0 0;
  min-height: 9.375rem;
  position: relative;

  @include media-breakpoint-up(md) {
    margin-right: -2.5rem;
    border-radius: .625rem;
    min-height: 13.375rem;
    z-index: 2;
  }

  @include media-breakpoint-up(lg) {
    min-height: 15.375rem;
    margin-right: -4rem;
  }

  @include media-breakpoint-up(xl) {
    min-height: 18.75rem;
    margin-right: -5.5rem;
  }
}

.vs-festival-results-card__name-date {
  border-radius: 0 0 .625rem .625rem;
  padding: 1.250rem;
  position: relative;
  overflow: hidden;
  z-index: 1;

  @include media-breakpoint-up(md) {
    border-radius: 0 .625rem .625rem 0;
    min-height: 13.375rem;
    text-align: center;
  }

  @include media-breakpoint-up(lg) {
    min-height: 15.375rem;
  }

  @include media-breakpoint-up(xl) {
    min-height: 18.75rem;
  }
}

.vs-festival-results-card__name-date-valign {
  @include media-breakpoint-up(md) {
    @include transform(translate(-50%, -50%));
    left: 50%;
    position: absolute;
    top: 50%;
    width: 80%;
  }

  @include media-breakpoint-up(lg) {
    left: calc(50% + 17px);
  }

  @include media-breakpoint-up(xl) {
    left: calc(50% + 28px);
  }
}

.vs-festival-results-card__title {
  color: $c-white;
  font-family: $font-family-serif;
  font-size: 1.125rem;
  line-height: 1.250rem;
  margin-bottom: .25rem;
  position: relative;
  text-transform: uppercase;

  @include media-breakpoint-up(lg) {
    font-size: 1.875rem;
    margin-bottom: 1.25rem;
  }
}

.vs-festival-results-card__date {
  color: $c-white;
  font-family: $font-family-serif;
  font-size: .75rem;
  line-height: 0.875rem;
  position: relative;
  text-transform: uppercase;

  @include media-breakpoint-up(lg) {
    font-size: 1.25rem;
  }
}

.vs-festival-results-card__info {
  background-color: $c-white;
  border-radius: 0 0 .625rem .625rem;
  margin-top: -.625rem;
  padding: 1.875rem 1.250rem 1.875rem;

  @include media-breakpoint-up(md) {
    padding-top: 2.5rem;
    padding-bottom: 1.250rem;
  }
}

.vs-festival-results-card__info-block {
  @include media-breakpoint-up(md) {
    display: inline-block;
    padding-right: 2.1375rem;
  }

  @include media-breakpoint-up(lg) {
    padding-right: 4.375rem;
  }
}

.vs-festival-results-card__event-name {
  color: $c-black;
  display: block;
  font-family: $font-family-serif;
  font-weight: 500;
  font-size: 1.125rem;
  line-height: 1.25rem;
  margin: 0;
  text-transform: uppercase;

  @include media-breakpoint-up(lg) {
    font-size: 1.875rem;
    margin-bottom: .5rem;
  }
}

.vs-festival-results-card__event-date {
  color: $c-black;
  font-family: $font-family-sans-serif;
  font-size: .75rem;
  font-weight: 500;
  margin-bottom: .875rem;
  text-transform: uppercase;

  @include media-breakpoint-up(lg) {
    font-size: 1rem;
  }
}

.vs-festival-results-card__button-wrapper {
  padding-top: 1rem;
}

.vs-festival-results-card__button {
  display: block;

  @include media-breakpoint-up(md) {
    display: inline-block;
  }
}


// Modifiers
// ----------------------------------------------------------------------------



// Responsive
// ----------------------------------------------------------------------------

